// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mockExportsLoader mock fs-extra 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.default = function() {};"
`;

exports[`mockExportsLoader mock fs-extra with types and generate default 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.copy = function() {};
exports.copySync = function() {};
exports.copyFile = function() {};
exports.move = function() {};
exports.moveSync = function() {};
exports.createFile = function() {};
exports.createFileSync = function() {};
exports.createSymlink = function() {};
exports.createSymlinkSync = function() {};
exports.ensureDir = function() {};
exports.ensureDirSync = function() {};
exports.mkdirs = function() {};
exports.mkdirp = function() {};
exports.mkdirsSync = function() {};
exports.mkdirpSync = function() {};
exports.outputFile = function() {};
exports.outputFileSync = function() {};
exports.readJson = function() {};
exports.readJSON = function() {};
exports.readJsonSync = function() {};
exports.readJSONSync = function() {};
exports.remove = function() {};
exports.removeSync = function() {};
exports.outputJSON = function() {};
exports.outputJson = function() {};
exports.outputJsonSync = function() {};
exports.outputJSONSync = function() {};
exports.writeJSON = function() {};
exports.writeJson = function() {};
exports.writeJsonSync = function() {};
exports.writeJSONSync = function() {};
exports.ensureFile = function() {};
exports.ensureFileSync = function() {};
exports.ensureLink = function() {};
exports.createLink = function() {};
exports.ensureLinkSync = function() {};
exports.createLinkSync = function() {};
exports.ensureSymlink = function() {};
exports.ensureSymlinkSync = function() {};
exports.emptyDir = function() {};
exports.emptydir = function() {};
exports.emptyDirSync = function() {};
exports.emptydirSync = function() {};
exports.pathExists = function() {};
exports.pathExistsSync = function() {};
exports.access = function() {};
exports.appendFile = function() {};
exports.chmod = function() {};
exports.chown = function() {};
exports.close = function() {};
exports.fchmod = function() {};
exports.fchown = function() {};
exports.fdatasync = function() {};
exports.fstat = function() {};
exports.fsync = function() {};
exports.ftruncate = function() {};
exports.futimes = function() {};
exports.lchown = function() {};
exports.link = function() {};
exports.lstat = function() {};
exports.mkdir = function() {};
exports.mkdirSync = function() {};
exports.open = function() {};
exports.opendir = function() {};
exports.read = function() {};
exports.readFile = function() {};
exports.readdir = function() {};
exports.readlink = function() {};
exports.realpath = function() {};
exports.namespace = function() {};
exports.rename = function() {};
exports.rm = function() {};
exports.rmdir = function() {};
exports.stat = function() {};
exports.symlink = function() {};
exports.truncate = function() {};
exports.unlink = function() {};
exports.utimes = function() {};
exports.write = function() {};
exports.writeFile = function() {};
exports.writev = function() {};
exports.mkdtemp = function() {};
exports.default = Object.assign({}, exports);"
`;

exports[`mockExportsLoader mock fs-extra with types, generate default and custom mocks 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", { value: true });
Object.assign(exports, (function () { return ({ CONST: 3, STR: 'test', FUNC: function () { return 1; } }); })());
exports.copy = function() {};
exports.copySync = function() {};
exports.copyFile = function() {};
exports.move = function() {};
exports.moveSync = function() {};
exports.createFile = function() {};
exports.createFileSync = function() {};
exports.createSymlink = function() {};
exports.createSymlinkSync = function() {};
exports.ensureDir = function() {};
exports.ensureDirSync = function() {};
exports.mkdirs = function() {};
exports.mkdirp = function() {};
exports.mkdirsSync = function() {};
exports.mkdirpSync = function() {};
exports.outputFile = function() {};
exports.outputFileSync = function() {};
exports.readJson = function() {};
exports.readJSON = function() {};
exports.readJsonSync = function() {};
exports.readJSONSync = function() {};
exports.remove = function() {};
exports.removeSync = function() {};
exports.outputJSON = function() {};
exports.outputJson = function() {};
exports.outputJsonSync = function() {};
exports.outputJSONSync = function() {};
exports.writeJSON = function() {};
exports.writeJson = function() {};
exports.writeJsonSync = function() {};
exports.writeJSONSync = function() {};
exports.ensureFile = function() {};
exports.ensureFileSync = function() {};
exports.ensureLink = function() {};
exports.createLink = function() {};
exports.ensureLinkSync = function() {};
exports.createLinkSync = function() {};
exports.ensureSymlink = function() {};
exports.ensureSymlinkSync = function() {};
exports.emptyDir = function() {};
exports.emptydir = function() {};
exports.emptyDirSync = function() {};
exports.emptydirSync = function() {};
exports.pathExists = function() {};
exports.pathExistsSync = function() {};
exports.access = function() {};
exports.appendFile = function() {};
exports.chmod = function() {};
exports.chown = function() {};
exports.close = function() {};
exports.fchmod = function() {};
exports.fchown = function() {};
exports.fdatasync = function() {};
exports.fstat = function() {};
exports.fsync = function() {};
exports.ftruncate = function() {};
exports.futimes = function() {};
exports.lchown = function() {};
exports.link = function() {};
exports.lstat = function() {};
exports.mkdir = function() {};
exports.mkdirSync = function() {};
exports.open = function() {};
exports.opendir = function() {};
exports.read = function() {};
exports.readFile = function() {};
exports.readdir = function() {};
exports.readlink = function() {};
exports.realpath = function() {};
exports.namespace = function() {};
exports.rename = function() {};
exports.rm = function() {};
exports.rmdir = function() {};
exports.stat = function() {};
exports.symlink = function() {};
exports.truncate = function() {};
exports.unlink = function() {};
exports.utimes = function() {};
exports.write = function() {};
exports.writeFile = function() {};
exports.writev = function() {};
exports.mkdtemp = function() {};
exports.default = Object.assign({}, exports);"
`;
